--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,9 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # Set left and right sections.
 set-option -g status-left " [#S] "
+set -g status-left-length "100"
 set-option -g status-right " 󰥔 %H:%M "
+set -g status-right-length "100"
 
 
 # Window list style and colors.
