change prefix to 'C-b'

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ set -g renumber-windows on
 
 # change default( Control + b ) prefix to backtick. 
 unbind C-b
-set-option -g prefix `
-bind ` send-prefix
+set-option -g prefix C-a
+bind C-a send-prefix
 
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 10 # Or "set -g escape-time 10" for tmux < 2.6
