--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,6 +74,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # statusline
 
@@ -85,7 +86,6 @@ set -g status-right-length "100"
 
 
 # Window list style and colors.
-setw -g window-status-style "fg=black,bg=green"
-setw -g window-status-current-style "fg=black,bg=orange"
-setw -g window-status-format " #I:#W "
-setw -g window-status-current-format " #I:#W "
+setw -g window-status-format " #I:#W#F "
+setw -g window-status-current-format " #I:#W#F "
+set -g status-style 'bg=#333333 fg=#6699cc'
