--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,7 @@ set -g status-right-length "100"
 
 
 # Window list style and colors.
-setw -g window-status-format " #I:#W#F "
-setw -g window-status-current-format " #I:#W#F "
-set -g status-style 'bg=#333333 fg=#6699cc'
+setw -g window-status-format "#I:#W#F"
+setw -g window-status-current-format "#I:#W#F"
+setw -g window-status-current-style "fg=#EBB9B9 bg=#25252F"
+set -g status-style 'bg=#1C1C26 fg=#B8DCEB'
