--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ set -g renumber-windows on
 
 # change default( Control + b ) prefix to backtick. 
 unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
+set-option -g prefix `
+bind ` send-prefix
 
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -sg escape-time 10 # Or "set -g escape-time 10" for tmux < 2.6
@@ -83,10 +83,3 @@ set-option -g status-left " [#S] "
 set -g status-left-length "100"
 set-option -g status-right " 󰥔 %H:%M "
 set -g status-right-length "100"
-
-
-# Window list style and colors.
-setw -g window-status-format "#I:#W#F"
-setw -g window-status-current-format "#I:#W#F"
-setw -g window-status-current-style "fg=#EBB9B9 bg=#25252F"
-set -g status-style 'bg=#1C1C26 fg=#B8DCEB'
