--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,5 +80,16 @@ bind % split-window -h -c "#{pane_current_path}"
 # Set left and right sections.
 set-option -g status-left " [#S] "
 set -g status-left-length "100"
-set-option -g status-right " 󰥔 %H:%M "
+set-option -g status-right " #(echo #{pane_current_path} | sed 's#$HOME#󱂵 #g') "
 set -g status-right-length "100"
+
+# Set format of items in window list.
+setw -g window-status-format " #I "
+setw -g window-status-current-format " #I "\
+
+# Status bar colors.
+set -g status-style "fg=#A9B1D6,bg=#383E5A"
+
+# Window list colors.
+set-window-option -g window-status-style fg=#383E5A,bg=#A9B1D6
+set-window-option -g window-status-current-style fg=#383E5A,bg=#9ECE6A
