--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,5 +91,5 @@ setw -g window-status-current-format " #I "\
 set -g status-style "fg=#A9B1D6,bg=#383E5A"
 
 # Window list colors.
-set-window-option -g window-status-style fg=#383E5A,bg=#A9B1D6
-set-window-option -g window-status-current-style fg=#383E5A,bg=#9ECE6A
+set-window-option -g window-status-style "fg=#383E5A,bg=#A9B1D6"
+set-window-option -g window-status-current-style "fg=#383E5A,bg=#9ECE6A"
