--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,8 +88,9 @@ setw -g window-status-format " #I "
 setw -g window-status-current-format " #I "\
 
 # Status bar colors.
-set -g status-style "fg=#A9B1D6,bg=#383E5A"
+set -g status-style "fg=#d0d0d0,bg=#1c1c1c"
 
 # Window list colors.
-set-window-option -g window-status-style "fg=#383E5A,bg=#A9B1D6"
-set-window-option -g window-status-current-style "fg=#383E5A,bg=#9ECE6A"
+set-window-option -g window-status-style "fg=#1c1c1c,bg=#585858"
+set-window-option -g window-status-current-style "fg=#1c1c1c,bg=#5f87af"
+
